# estagio-mixr

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  vcpkg.json
include/tupa/engine/: aircraft.hpp  simulation.hpp  tacview.hpp
scripts/: setup.sh
source/: aircraft.cpp  main.cpp  tacview.cpp
